2002-07-02  Thorsten Kukuk  <kukuk@suse.de>

	* rpc.ypxfrd/Makefile.in (rpc_ypxfrd_LDADD): link against libyp.a
	before linking against libgdbm.

	* ypserv/Makefile.in (rpc_ypxfrd_LDADD): Likewise.
	(Reported by Todd R. Eigenschink <todd@tekinteractive.com>)

002-05-27  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.4

	* scripts/ypMakefile.in (MINUID/MINGID): increase both variables
	to 500 as defined by LSB and to be compatible with most Linux
	distributions.

	* lib/ypserv.conf.5: move from here ...
	* etc/ypserv.conf.5: ... to here. Remove mangle field description.
	* lib/Makefile.am: Remove ypserv.conf.5
	* etc/Makefile.am: Add ypserv.conf.5

2002-05-23  Martin Vidner  <mvidner@suse.cz>

	* yphelper/yphelper.c: Add -i option to getopt_long

2002-05-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.3

	* yppush/yppush.c (hostcmp): Get ride of this function, since it
	could remove correct slaves which have the same hostname but are
	in other domains.

	* yphelper/yphelper.c (is_master): New function, check if we are
	the master for a given map.

	* yphelper/Makefile.am (yphelper_LDADD): Link against dbm library.

2002-05-13  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Prefer libxcrypt over libcrypt.

2002-04-26  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Adjust for new autoconf.

	* config.guess: Deleted.
	* config.sub: Deleted.
	* acconfig.h: Deleted.

	* lib/ypserv.conf.5: Document trusted_master option.

	* yphelper/yphelper.c: Fix compiler warnings.

	* mknetid/mknetid.c: Use getline/getdelim instead of fgets
	to avoid static buffer.

	* scripts/create_printcap.in: Fix syntax error to get it to
	work with all awk implementations.

2002-04-06  Thorsten Kukuk  <kukuk@suse.de>

	* yppush/yppush.c (yppush_xfrrespprog_1): Exit from thread
	if not YPPUSHPROC_NULL was called.

2001-12-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* ypserv/server.c: Add missing break in switch statement.
	* ypserv/ypserv.c (main): getopt returns -1, not EOF.
